--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.29)
 project(app)
 
 add_executable(${PROJECT_NAME} main.cpp)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
