--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.29)
 
 project(app)
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp a.cpp b.cpp)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
